some design fixes as suggested by others

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -1,5 +1,9 @@
 @use '../abstracts/index' as *;
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     background: $primary-color;
     font-family: 'Roboto Slab', serif;
