--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -32,8 +32,18 @@
   justify-content: center;
 }
 
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .about-first-line{
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  }
+}
+
+
 .about-first-line{
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: $alt-fill-color;
+  font-size: 20px; 
+  font-weight: 500; 
 }
 
 .about-paragraphs{
