--- a/style.css
+++ b/style.css
@@ -494,13 +494,14 @@ header {
 #contact-email-link,
 #contact-telephone-link {
   font-size: 16px;
-  color: #11CCED;
+  color: #ffffff;
   display: block;
 }
 
 #contact-email-link:hover,
 #contact-telephone-link:hover {
   text-decoration: underline;
+  color: #000000;
 }
 
 #contact-email-link {
