--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ h6 {
   padding: 5px 5px 5px 5px;
   position: fixed;
   margin: 20px 0 0 20px;
+  cursor: pointer;
 }
 
 .menu-line {
@@ -111,7 +112,6 @@ h6 {
 }
 
 .big-nav {
-  display: none;
   height: 100%;
   width: 160px;
   position: fixed;
@@ -125,6 +125,7 @@ h6 {
   border-right: #ffffff 2px solid;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
+  transform: translate3d(-160px, 0, 0);
 }
 
 .big-nav a:hover {
@@ -190,6 +191,10 @@ h6 {
 .currentPage {
   text-decoration: underline;
   color: #000000;
+}
+
+#big-nav.show {
+  transform: translate3d(160px, 0, 0);
 }
 
 @media screen and (min-width: 576px) {
@@ -520,7 +525,7 @@ header {
 }
 
 .contact-form-input:focus {
-  border: #ff7e22;
+  outline: none;
 }
 
 .contact-form-input::-moz-placeholder {
@@ -568,6 +573,21 @@ header {
   padding-top: 20px;
   padding-bottom: 50px;
   font-size: 20px;
+}
+
+.Form-focused {
+  border: #ff7e22 solid 2px;
+  border-radius: 6px;
+}
+
+.Form-valid {
+  border: #03AC13 solid 2px;
+  border-radius: 6px;
+}
+
+.Form-invalid {
+  border: #d21204 solid 2px;
+  border-radius: 6px;
 }
 
 @media screen and (min-width: 430px) {
