Adding side menu changes

--- a/scss/partials/_navs.scss
+++ b/scss/partials/_navs.scss
@@ -14,6 +14,9 @@
     position: fixed;
     margin: 20px 0 0 20px;
     cursor: pointer;
+    border:none;
+    left: 0;
+    top: 0;
 }
 
 .menu-line {
@@ -39,7 +42,7 @@
     border-right: $fill-color 2px solid;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    transform: translate3d(-160px, 0, 0);
+    visibility: hidden;
 }
 
 .big-nav a:hover {
@@ -108,8 +111,12 @@
     color: $alt-fill-color;
 }
 
-#big-nav.show {
-    transform: translate3d(160px, 0, 0);
+.show{
+    visibility: visible;
+}
+
+.hide{
+    visibility: hidden;
 }
 
 @media screen and (min-width:$breakpoint-small) {
