--- a/scss/partials/_coding.scss
+++ b/scss/partials/_coding.scss
@@ -104,55 +104,62 @@
     align-items: center;
 }
 
-.menu-showing {
-    width: calc(100% - 163px);
-    margin-left: 161px;
+.Nav-out {
     overflow-x: hidden;
+
+    .big-nav {
+        transform: translateX(0);
+    }
+
+    .small-nav {
+        transform: translateX(163px);
+        padding: 0 0 10px;
+
+        .menu-line{
+            display: none;
+        }
+        
+        .menu {
+            display: none;
+        }
+
+        .close-menu {
+            display: block;
+        }
+    }
+
+    #menu-showing {
+        overflow-x: hidden;
+        transform: translateX(80px);
     
-
-    .hero-image {
-        width: calc(100% - 163px);
+        #menu-overlay {
+            background: rgba(3, 2, 1, 0);
+            overflow: hidden;
+            position: fixed;
+            content: '';
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 4;
+            opacity: .3;
+            width: 100%;
+            height: 100vh;
+        }
+    
+        #about-page {
+            transform: translateX(163px);
+        }
+    
+        #SCSscheme-page {
+            transform: translateX(163px);
+        }
+    
+        #coding-container {
+            transform: translateX(163px);
+        }
     }
-
-    #contact-area {
-        width: calc(100% - 163px);
-    }
-
-    .projects {
-        width: calc(100% - 163px);
-    }
-
-    #scroll-up {
-        width: calc(100% - 163px);
-    }
-
-    #menu-overlay {
-        background: rgba(3, 2, 1, 0);
-        overflow: hidden;
-        position: fixed;
-        content: '';
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        z-index: 4;
-        opacity: .3;
-        width: 100%;
-        height: 100vh;
-    }
-
-    #about-page {
-        width: calc(100% - 163px);
-    }
-
-    #SCSscheme-page {
-        width: calc(100% - 163px);
-    }
-
-    #coding-container {
-        width: calc(100% - 160px);
-        padding: 0 20px 0 10px;
-    }
+    
 }
 
 @media screen and (min-width:$breakpoint-small) {
