Fixed sizing and margins/paddings

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,19 +1,18 @@
-// Colours
-
+// Background colours
 $primary-color:#455680;
 $secondary-color:#ff7e22;
 $tertiary-color:#11CCED;
+$coding-background: #272822;
 
+// Text colours
 $fill-color:#ffffff;
 $alt-fill-color: #000000;
 
+// Icon colours
 $linkedin-color: #0E76A8;
 $github-color: #24292E;
 
-$coding-background: #272822;
-
 // media query variables
-
 $breakpoint-small: 576px;
 $breakpoint-medium: 768px;
 $breakpoint-large: 992px;
