--- a/scss/partials/_SCSscheme.scss
+++ b/scss/partials/_SCSscheme.scss
@@ -19,15 +19,17 @@
     margin-bottom: 50px;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
+    max-width: 1400px;
+    padding: 0 25px;
 }
 
 .SCSscheme--card {
-    margin: 30px 15px 20px;
+    margin: 30px 0 20px;
     background-color: $tertiary-color;
     padding: 30px;
     border-radius: 13px;
     box-shadow: 10px 10px rgba(0,0,0,0.5);
+    width: 100%;
 
     h4 {
         font-size: 19px;
@@ -69,9 +71,9 @@
 }
 
 @media  screen and (min-width:734px) {
-    .SCSscheme--card {
-        width: 500px;
-    }   
+    // .SCSscheme--card {
+    //     width: 500px;
+    // }   
 }
 
 @media screen and (min-width:751px) {
@@ -80,22 +82,21 @@
         display: flex;
     }
 
-    .SCSscheme--card {
-            width: 90%;
-        }
+    // .SCSscheme--card {
+    //         width: 90%;
+    //     }
 }
 
-@media screen and (min-width:$breakpoint-medium) {
-    .SCSscheme--card {
-        width: 80%;
-    }
-}
+// @media screen and (min-width:$breakpoint-medium) {
+//     .SCSscheme--card {
+//         width: 80%;
+//     }
+// }
   
 @media screen and (min-width:1400px) {
 
     .SCSscheme--card {
         margin: 20px 0 20px;
-        width: 900px;
     }
 
     .SCSscheme-title {
