--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -33,3 +33,10 @@ h6 {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
 }
+
+
+#menu-showing {
+    transition: transform ease-in 250ms;
+    overflow-x: hidden;
+    justify-content: space-around;
+}
