--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -1,7 +1,7 @@
 @use '../abstracts/index' as *;
 
 #contact-area {
-    padding: 100px 0 0 0;
+    padding: 100px 25px 0;
     justify-content: space-around;
     align-content: center;
     align-items: center;
