--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@ h6 {
   font-weight: 500;
 }
 
+#menu-showing {
+  transition: transform ease-in 250ms;
+  overflow-x: hidden;
+  justify-content: space-around;
+}
+
 .small-nav {
   width: 60px;
   height: 60px;
@@ -101,6 +107,7 @@ h6 {
   margin: 20px 0 0 20px;
   cursor: pointer;
   border: none;
+  transition: transform ease-in 250ms;
 }
 
 .menu-line {
@@ -139,7 +146,7 @@ h6 {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   transform: translateX(-100%);
-  transition: translate ease-in 1000ms;
+  transition: transform ease-in 250ms;
 }
 
 .big-nav a:hover {
@@ -318,7 +325,7 @@ header {
   width: 1400px;
   display: flex;
   flex-direction: column;
-  margin: 0 10px;
+  margin: 0 25px;
   justify-content: space-around;
 }
 
@@ -390,6 +397,10 @@ header {
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
+.project-title-filled {
+  margin-top: 140px;
+}
+
 .project-description {
   display: flex;
   font-size: 16px;
@@ -447,7 +458,7 @@ header {
   }
 }
 #contact-area {
-  padding: 100px 0 0 0;
+  padding: 100px 25px 0;
   justify-content: space-around;
   align-content: center;
   align-items: center;
@@ -648,6 +659,7 @@ header {
 #about-container {
   padding-bottom: 50px;
   margin-bottom: 50px;
+  max-width: 1400px;
 }
 
 #about-me-paragraph {
@@ -699,25 +711,6 @@ header {
     font-size: 45px;
     padding-top: 50px;
   }
-
-  #about-container {
-    width: 300px;
-  }
-}
-@media screen and (min-width: 768px) {
-  #about-container {
-    width: 500px;
-  }
-}
-@media screen and (min-width: 992px) {
-  #about-container {
-    width: 700px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  #about-container {
-    width: 1000px;
-  }
 }
 #SCSscheme-page {
   display: flex;
@@ -738,15 +731,17 @@ header {
   margin-bottom: 50px;
   justify-content: space-around;
   align-items: center;
-  width: 100%;
+  max-width: 1400px;
+  padding: 0 25px;
 }
 
 .SCSscheme--card {
-  margin: 30px 15px 20px;
+  margin: 30px 0 20px;
   background-color: #11CCED;
   padding: 30px;
   border-radius: 13px;
   box-shadow: 10px 10px rgba(0, 0, 0, 0.5);
+  width: 100%;
 }
 .SCSscheme--card h4 {
   font-size: 19px;
@@ -778,29 +773,14 @@ header {
     font-size: 45px;
   }
 }
-@media screen and (min-width: 734px) {
-  .SCSscheme--card {
-    width: 500px;
-  }
-}
 @media screen and (min-width: 751px) {
   #SCSscheme {
     display: flex;
-  }
-
-  .SCSscheme--card {
-    width: 90%;
-  }
-}
-@media screen and (min-width: 768px) {
-  .SCSscheme--card {
-    width: 80%;
   }
 }
 @media screen and (min-width: 1400px) {
   .SCSscheme--card {
     margin: 20px 0 20px;
-    width: 900px;
   }
 
   .SCSscheme-title {
@@ -808,8 +788,9 @@ header {
   }
 }
 #coding-container {
-  padding: 0 10px 0 3px;
   margin-bottom: 100px;
+  width: 100%;
+  padding: 0 25px;
 }
 
 #coding-title {
@@ -820,12 +801,11 @@ header {
 #coding-example {
   background: #11CCED;
   max-height: 900px;
-  margin: 50px 5% 0;
-  flex-basis: 260px;
-  max-width: 900px;
+  margin: 50px auto 0;
+  max-width: 1400px;
   border-radius: 13px;
   box-shadow: 7px 7px rgba(0, 0, 0, 0.5);
-  padding: 0 8px;
+  padding: 25px 8px;
 }
 
 #coding-example-title {
@@ -836,8 +816,7 @@ header {
 }
 
 #coding-example-code {
-  content: "";
-  max-width: 880px;
+  max-width: 1400px;
   flex-basis: 240px;
   height: 250px;
   margin: 0 0 20px;
@@ -930,8 +909,7 @@ header {
   display: block;
 }
 .Nav-out #menu-showing {
-  overflow-x: hidden;
-  transform: translateX(80px);
+  transform: translateX(160px);
 }
 .Nav-out #menu-showing #menu-overlay {
   background: rgba(3, 2, 1, 0);
@@ -965,7 +943,6 @@ header {
 
   #coding-example {
     padding: 50px 30px;
-    margin: 50px auto 0;
     box-shadow: 10px 10px rgba(0, 0, 0, 0.5);
   }
 
