--- a/style.css
+++ b/style.css
@@ -908,22 +908,25 @@ header {
 .Nav-out .small-nav .close-menu {
   display: block;
 }
+.Nav-out #menu-overlay::after {
+  top: 0;
+  right: 0;
+  position: absolute;
+  width: 0;
+  height: 0;
+  opacity: 0;
+  z-index: 10;
+  content: "";
+  background: rgba(0, 0, 0, 0.4);
+  transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
+}
 .Nav-out #menu-showing {
   transform: translateX(160px);
 }
-.Nav-out #menu-showing #menu-overlay {
-  background: rgba(3, 2, 1, 0);
-  overflow: hidden;
-  position: fixed;
-  content: "";
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 4;
-  opacity: 0.3;
+.Nav-out #menu-showing #menu-overlay::after {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  opacity: 0.7;
 }
 .Nav-out #menu-showing #about-page {
   transform: translateX(163px);
@@ -948,26 +951,6 @@ header {
 
   .coding-examples-links {
     padding-bottom: 0;
-  }
-}
-@media screen and (min-width(760px)) {
-  .menu-showing #contact-area {
-    margin-left: 80px;
-  }
-  .menu-showing .projects {
-    margin-left: 80px;
-  }
-  .menu-showing #scroll-up {
-    margin-left: 80px;
-  }
-  .menu-showing #about-page {
-    margin-left: 80px;
-  }
-  .menu-showing #SCSscheme-page {
-    margin-left: 80px;
-  }
-  .menu-showing #coding-container {
-    margin-left: 80px;
   }
 }
 @media screen and (min-width(1105px)) {
