--- a/scss/partials/_coding.scss
+++ b/scss/partials/_coding.scss
@@ -52,6 +52,29 @@
         line-height: 22px;
     }
 }
+
+.language-html {
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-size: 1em;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.5;
+    // tab-size: 4;
+    // hyphens: none;
+}
+
+.SQL{
+    flex-direction: row;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    // overflow: hidden;
+    justify-content: space-around;
+}
+
 .coding-example-description-container{
     margin: 80px 0 0;
     padding-bottom: 30px;
@@ -63,6 +86,15 @@
 
 #My_query {
     padding: 0 20px;
+}
+
+.SQL_column {
+    display: flex;
+    flex-direction: column;
+
+    span {
+        text-align: center;
+    }
 }
 
 #SQL-explanation {
