--- a/style.css
+++ b/style.css
@@ -837,6 +837,25 @@ header {
   line-height: 22px;
 }
 
+.language-html {
+  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  font-size: 1em;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
+}
+
+.SQL {
+  flex-direction: row;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: space-around;
+}
+
 .coding-example-description-container {
   margin: 80px 0 0;
   padding-bottom: 30px;
@@ -848,6 +867,14 @@ header {
 
 #My_query {
   padding: 0 20px;
+}
+
+.SQL_column {
+  display: flex;
+  flex-direction: column;
+}
+.SQL_column span {
+  text-align: center;
 }
 
 #SQL-explanation {
