--- a/style.css
+++ b/style.css
@@ -865,8 +865,17 @@ header {
   color: #000000;
 }
 
+#SQL-image {
+  width: 100%;
+  height: 100%;
+}
+
 #My_query {
-  padding: 0 20px;
+  padding: 0 20px 30px;
+}
+#My_query p {
+  line-height: 1.5rem;
+  min-width: 180px;
 }
 
 .SQL_column {
@@ -881,9 +890,29 @@ header {
   text-align: left;
   list-style: inside;
 }
+#SQL-explanation li {
+  margin: 20px 5px;
+}
 
 .SQL-explanation {
   color: #000000;
+  margin: 20px 5px;
+}
+
+#players_table {
+  padding: 0 0 0 800px;
+}
+
+#penalty_table {
+  padding: 0 0 0 310px;
+}
+
+#country_table {
+  padding: 0 0 0 280px;
+}
+
+#my_results {
+  padding: 0 0 0 280px;
 }
 
 .token-action {
@@ -992,9 +1021,54 @@ header {
   .coding-examples-links {
     padding-bottom: 0;
   }
+
+  #players_table {
+    padding: 0 0 0 450px;
+  }
+
+  #penalty_table {
+    padding: 0 0 0 50px;
+  }
+
+  #country_table {
+    padding: 0 0 0 30px;
+  }
+
+  #my_results {
+    padding: 0 0 0 0;
+  }
 }
-@media screen and (min-width(1105px)) {
+@media screen and (min-width: 1105px) {
   #coding-container {
     padding: 0 15px;
+  }
+
+  #players_table {
+    padding: 0 0 0px 0px;
+  }
+
+  #penalty_table {
+    padding: 0 0 0px 0px;
+  }
+
+  #country_table {
+    padding: 0 0 0px 30px;
+  }
+}
+@media screen and (-ms-high-contrast: none) {
+  #players_table {
+    padding: 0 0 0px 0px;
+  }
+
+  #penalty_table {
+    padding: 0 0 0px 0px;
+  }
+
+  #country_table {
+    padding: 0 0 0px 0px;
+  }
+
+  #my_results {
+    padding: 0 0 0 0;
   }
 }/*# sourceMappingURL=style.css.map */
