--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -33,16 +33,8 @@
   justify-content: center;
 }
 
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .about-first-line{
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-  }
-}
-//The rules above are for IE only as the rules below work everywhere else
-
 .about-first-line{
-  -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: $alt-fill-color;
+  color: $alt-fill-color;
   font-size: 20px; 
   font-weight: 500; 
 }
