--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -37,6 +37,7 @@
   color: $alt-fill-color;
   font-size: 20px; 
   font-weight: 500; 
+  font-family: 'Roboto Slab', serif;
 }
 
 .about-paragraphs{
