--- a/style.css
+++ b/style.css
@@ -701,6 +701,7 @@ header {
   color: #000000;
   font-size: 20px;
   font-weight: 500;
+  font-family: "Roboto Slab", serif;
 }
 
 .about-paragraphs {
