--- a/style.css
+++ b/style.css
@@ -323,7 +323,8 @@ header {
 .projects-container {
   width: 1400px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   margin: 0 25px;
   justify-content: space-around;
 }
@@ -340,6 +341,7 @@ header {
   overflow: hidden;
   height: 300px;
   position: relative;
+  width: 100%;
 }
 
 .project-background {
@@ -433,6 +435,11 @@ header {
     margin-top: 180px;
   }
 }
+@media screen and (min-width: 768px) {
+  .project {
+    width: 350px;
+  }
+}
 @media screen and (min-width: 1200px) {
   #projects {
     display: flex;
@@ -443,24 +450,15 @@ header {
   }
 
   .project {
-    flex-basis: 450px;
-  }
-}
-@media screen and (min-width: 1300px) {
-  .project {
-    flex-basis: 350px;
-  }
-}
-@media screen and (min-width: 1560px) {
-  .project {
-    flex-basis: 450px;
+    width: 450px;
   }
 }
 #contact-area {
-  padding: 100px 25px 0;
+  padding: 0px 25px 0;
   justify-content: space-around;
   align-content: center;
   align-items: center;
+  margin-top: 50px;
 }
 
 #contact--area {
@@ -550,6 +548,7 @@ header {
   margin-top: 15px;
   border-radius: 6px;
   border: #ffffff 2px solid;
+  text-align: center;
 }
 
 #contact-form-submit:hover {
@@ -565,13 +564,24 @@ header {
   font-size: 20px;
 }
 
+#message-status-area {
+  display: flex;
+  justify-content: center;
+  padding: 100px 0 0;
+}
+
 .form-status-bar {
   border-radius: 25px;
   display: none;
   z-index: 10;
+  width: 250px;
+  height: 50px;
+  padding: 8px;
+  font-size: 15px;
+  margin-top: 275px;
 }
 
-.success_bar {
+.success-bar {
   background-color: #03AC13;
   display: block;
 }
@@ -608,6 +618,10 @@ header {
   #contact-form-last {
     width: 49%;
   }
+
+  .form-status-bar {
+    margin-top: 0;
+  }
 }
 @media screen and (min-width: 576px) {
   #contact-email-link,
@@ -622,6 +636,11 @@ header {
 
   #contact-form-last {
     margin-left: 0;
+  }
+
+  .form-status-bar {
+    width: 550px;
+    padding: 20px;
   }
 }
 @media screen and (min-width: 599px) {
