trying to get the desired response

--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -149,6 +149,10 @@
     border-radius: 6px;
 }
 
+#hiddenHole {
+    display: none;
+}
+
 @media screen and (min-width:430px) {
     #contact-form-last {
         margin-left: 1%;
