--- a/style.css
+++ b/style.css
@@ -606,6 +606,10 @@ header {
   border-radius: 6px;
 }
 
+#hiddenHole {
+  display: none;
+}
+
 @media screen and (min-width: 430px) {
   #contact-form-last {
     margin-left: 1%;
