--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -5,7 +5,7 @@
     justify-content: space-around;
     align-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: -100px;
 }
 
 #contact--area {
@@ -110,7 +110,9 @@
 #message-status-area {
     display: flex;
     justify-content: center;
-    padding: 100px 0 0;
+    align-items: center;
+    height: 150px;
+    margin-top: 50px;
 }
 
 .form-status-bar {
@@ -121,7 +123,7 @@
     height: 50px;
     padding: 8px;
     font-size: 15px;
-    margin-top: 275px;
+    margin-top: 550px;
 }
 
 .success-bar {
@@ -149,10 +151,6 @@
     border-radius: 6px;
 }
 
-#hiddenHole {
-    display: none;
-}
-
 @media screen and (min-width:430px) {
     #contact-form-last {
         margin-left: 1%;
@@ -166,7 +164,7 @@
     }
 
     .form-status-bar{
-        margin-top: 0;
+        margin-top: 450px;
     }
 }
 
@@ -177,18 +175,27 @@
     font-size: 20px;
     }
 
+    #contact-area{
+        margin-top: 50px;
+    }
+
     .contact-area-container {
         padding-left: 30px;
         flex-grow: 1;
     }
-
+    
     #contact-form-last {
         margin-left: 0;
+    }
+
+    #message-status-area {
+        padding: 100px 0 0;
     }
 
     .form-status-bar {
         width: 550px;
         padding: 20px;
+        margin-top: 0px;
     }
 }
 
